--- a/gen_html.ipynb
+++ b/gen_html.ipynb
@@ -1699,6 +1699,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14576\\3380430512.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;31m# print(f'idx : {i}')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mdata_detection\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstructure_lines\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mtable_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtable_dict_final\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14576\\3380430512.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     65\u001b[0m         \u001b[1;31m###################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m         \u001b[0mdata_detection\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstructure_lines\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m         \u001b[0mfile_name_test\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdata_detection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'filename'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "for i  in range(20000):\n",
+    "    try:\n",
+    "        # i = 101\n",
+    "        # print(f'idx : {i}')\n",
+    "        data_detection = json.loads(structure_lines[i])\n",
+    "        table_dict = table_dict_final(i)\n",
+    "        file_name= data_detection['filename']\n",
+    "        # print(file_name)\n",
+    "        file_name_str = str(file_name[:-4]).replace('/','_')\n",
+    "        table_id = data_detection['table_id']\n",
+    "        file_name_str = file_name_str + '_' + str(table_id)\n",
+    "        pdf_filepath = data_fintabnet_path + \"pdf/\" + file_name\n",
+    "        pdf_page = PdfFileReader(pdf_filepath).getPage(0)\n",
+    "        pdf_shape = pdf_page.mediaBox\n",
+    "        pdf_height = pdf_shape[3]-pdf_shape[1]\n",
+    "        pdf_width = pdf_shape[2]-pdf_shape[0]\n",
+    "        converted_images = convert_from_path(pdf_filepath, size=(pdf_width, pdf_height))\n",
+    "        img = converted_images[0]\n",
+    "        # print(pdf_height, pdf_width)\n",
+    "        table_box = data_detection['bbox']\n",
+    "        # print(f'1st : {table_box}')\n",
+    "        # print(f'pdf_height {pdf_height}')\n",
+    "        tl_x =              (table_box[0])\n",
+    "        tl_y = float(pdf_height) - (table_box[3]) \n",
+    "        br_x =              (table_box[2])\n",
+    "        br_y = float(pdf_height) - (table_box[1])\n",
+    "        # print(tl_x, tl_y, br_x, br_y)\n",
+    "        img_array = np.array(img)\n",
+    "        page_image = Image.fromarray(img_array)\n",
+    "        image_table_crop = page_image.crop((int(tl_x), int(tl_y), int(br_x), int(br_y)))\n",
+    "        # plt.imshow(image_table_crop)\n",
+    "        # plt.show()\n",
+    "        num_rows = max([max(cell['row_nums']) for cell in table_dict['cells']]) + 1\n",
+    "        num_columns = max([max(cell['column_nums']) for cell in table_dict['cells']]) + 1\n",
+    "        row_dict, col_dict = get_row_col_cell(num_rows, num_columns, table_dict)\n",
+    "        row_final = get_row_bbox_final(row_dict, image_table_crop)\n",
+    "        col_final = get_col_bbox_final(col_dict, image_table_crop)\n",
+    "\n",
+    "\n",
+    "        row_mid_line = get_row_bbox_midpoint(row_final , image_table_crop)\n",
+    "        col_mid_line = get_col_bbox_midpoint(col_final , image_table_crop)\n",
+    "        row_point_list = get_row_mid_pont(row_mid_line , image_table_crop)\n",
+    "        col_point_list = get_col_mid_point(col_mid_line , image_table_crop)\n",
+    "        bbox_cell_ori = get_bbox_cell(row_point_list,col_point_list)\n",
+    "\n",
+    "\n",
+    "        final_matrix_row = get_matrix_row(table_dict, num_rows, num_columns)\n",
+    "        final_matrix_col = get_matrix_col(table_dict, num_rows, num_columns)\n",
+    "\n",
+    "        # img_test = Image.fromarray(np.array(image_table_crop))\n",
+    "        # draw = ImageDraw.Draw(img_test)\n",
+    "\n",
+    "        ########## save data html ################\n",
+    "        html_file_name = html_folder + file_name_str + '.html'\n",
+    "        with open(html_file_name, 'w') as f:\n",
+    "            table_dict_html = gen_table_dict_for_html(table_dict['cells'])\n",
+    "            html_table = generate_html_table(table_dict_html)   \n",
+    "            f.write(html_table)\n",
+    "            f.close()\n",
+    "\n",
+    "        ###################################\n",
+    "        ############ save image ###############\n",
+    "        file_name_image_save = image_folder + file_name_str + '.jpg'\n",
+    "        image_table_crop.save(file_name_image_save)\n",
+    "        ###################################\n",
+    "    except:\n",
+    "        data_detection = json.loads(structure_lines[i])\n",
+    "        file_name_test= data_detection['filename']\n",
+    "        print(file_name_test)       "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
